                    
                    oarnodesetting -h n12 -p drain=YES

               :ATTENTION: the admission rule with "maintenance" must be
                          changed with the "drain" keyword.
  - [cpuset] cpuset resources filed is now varchar.
             It is now possible to specify several core id in 1 cpuset field
             like::

                1+4+8

version 2.5.3:
--------------
  - Add the "Name" field on the main Monika page. This is easier for the users
    to find there jobs.
  - Add MAX_CONCURRENT_JOB_TERMINATIONS into the oar.conf ofthe master. This
    limits the number of concurrent processes launched by the Almighty when the
    the jobs finish.
  - Bug fix in ssh key feature in oarsub.
  - Added --compact, -c option to oarstat (compact view or array jobs).
  - Improvements of the API: media upload from html forms, listing of files, 
    security fixes, add of new configuration options, listing of the scheduled
    nodes into jobs, fixed bad reinitialization of the limit parameter,
    stress_factor, accounting... 
    See OAR-DOCUMENTATION-API-USER for more informations.
  - CGROUP: handle cgroup hierarchy already mounted by the OS like in Fedora 18
    (by systemd in /sys/fs/cgroup) in job_resource_manager_cgroups.pl.
  - Bug fix oar-database: fix the reset function for mysql.
  - SVG version of drawgantt: all features are now implemented to replace the
    legacy drawgantt. Both can be installed.
  - Bug fix schedulers: rewrite schedulers with placeholders.
  - Rework default admission rules.
  - Add support to the oar_resource_init command to generate resources with
    a "thread" property (useful if HyperThreading is activated/used on nodes).
  - Fix stdout/stderr bug: check the allowed characters in the path given by
    the users.
  - Fix: the user shell (bash) didn't source /etc/bash.bashrc in batch jobs.
  - Add quota which limits the number of used resources at a time depending of