@@ -700,9 +700,9 @@ if (grep(/^noop$/, @Type)){
     }
 }
 
-if (defined($notify) && $notify =~ m/\s*exec:(.+)$/m){
+if (defined($notify) && $notify =~ m/^.*exec\s*:.+$/m){
     my $notify_exec_regexp = '[a-zA-Z0-9_.\/ -]+';
-    unless ($notify =~ m/\s*exec:($notify_exec_regexp)$/m){
+    unless ($notify =~ m/.*exec\s*:($notify_exec_regexp)$/m){
       warn("/!\\ Insecure characters found in notification method (the allowed regexp is: $notify_exec_regexp).\n");
       OAR::Sub::close_db_connection(); exit(16);
     }
